fix($stylesheet): Add button-group mixin to Call To Action and alignment configuration

--- a/src/styles/_section_call_to_action.scss
+++ b/src/styles/_section_call_to_action.scss
@@ -8,7 +8,15 @@
   }
 
   .section__button-group {
+    @include button-group;
+
     text-align: inherit;
+
+    .button {
+      @include screen-sm-max {
+        margin-bottom: $gutter-width / 2;
+      }
+    }
   }
 }
 
